--- a/src/app/components/article-editor/article-editor.component.html
+++ b/src/app/components/article-editor/article-editor.component.html
@@ -16,10 +16,10 @@
   [(ngModel)]="content"></quill-editor>
 
 <div class="btn-contols">
-  <button (click)="save();" mat-raised-button color="primary" class="button">
+  <button (click)="save();" mat-button mat-raised-button color="primary" class="button">
     Сохранить
   </button>
-  <button (click)="goBack()" mat-raised-button class="button">
+  <button (click)="goBack()" mat-button class="button">
     Отменить
   </button>
 </div>
