--- a/src/app/components/rubric/rubric.component.html
+++ b/src/app/components/rubric/rubric.component.html
@@ -1,5 +1,10 @@
 <div>
-  <button class='add-rubric-button' mat-flat-button (click)="openAddRubricDialog(0)">
+  <button
+    class='add-rubric-button'
+    mat-button
+    mat-flat-button
+    (click)="openAddRubricDialog(0)"
+  >
     <div class="icon-wrapper add-icon-wrapper">
       <mat-icon>create_new_folder</mat-icon>
     </div>
