--- a/src/app/components/delete-dialog/delete-dialog.component.html
+++ b/src/app/components/delete-dialog/delete-dialog.component.html
@@ -1,7 +1,7 @@
 <div mat-dialog-content>
-    <p>Вы уверены, что хотите удалить {{data}}?</p>    
+    <p>Вы уверены, что хотите удалить {{data}}?</p>
 </div>
 <div mat-dialog-actions>
     <button mat-button mat-raised-button color="primary" [mat-dialog-close]="true">Да</button>
-    <button mat-button  mat-raised-button mat-dialog-close>Нет</button>
+    <button mat-button mat-dialog-close>Нет</button>
 </div>
