--- a/src/app/components/rubric/add-rubric-dialog/add-rubric-dialog.component.html
+++ b/src/app/components/rubric/add-rubric-dialog/add-rubric-dialog.component.html
@@ -1,11 +1,10 @@
 <div mat-dialog-content>
-  <p>Название новой рубрики</p>
+  <h2 mat-dialog-title>Добавление новой рубрики</h2>
   <mat-form-field class = "input-container">
-    <input matInput [(ngModel)]="data">
+    <input placeholder="Название рубрики" matInput [(ngModel)]="data">
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
-    <button mat-button  mat-raised-button color="primary" [mat-dialog-close]="data" cdkFocusInitial>Добавить</button>
-    <button mat-button mat-raised-button (click)="onNoClick()">Отмена</button>
-  
+    <button mat-button mat-raised-button color="primary" [mat-dialog-close]="data" cdkFocusInitial>Добавить</button>
+    <button mat-button mat-flat-button (click)="onNoClick()">Отмена</button>
 </div>
