--- a/src/app/components/set-rubric-dialog/set-rubric-dialog.component.html
+++ b/src/app/components/set-rubric-dialog/set-rubric-dialog.component.html
@@ -1,10 +1,10 @@
 <div mat-dialog-content>
-    <p>Укажите название новой рубрики</p>    
+    <h2 mat-dialog-title>Укажите название новой рубрики</h2>
+    <app-article-search
+        type="rubric"
+        (selected)="setRubric($event)"
+    ></app-article-search>
 </div>
-<app-article-search
-    type="rubric"
-    (selected)="setRubric($event)"
-></app-article-search>
 <div mat-dialog-actions>
     <button
         mat-button
@@ -14,6 +14,6 @@
         [mat-dialog-close]="result">Ok</button>
     <button
         mat-button
-        mat-dialog-close 
+        mat-dialog-close
         (click)="onNoClick()">Отмена</button>
 </div>
