--- a/src/styles.css
+++ b/src/styles.css
@@ -22,30 +22,46 @@ body {
   font-size: 16px;
   font-family: "Roboto", sans-serif;
 }
+
+.ql-snow .ql-editor h1,
+.ql-snow .ql-editor h2,
+.ql-snow .ql-editor h3,
+.ql-snow .ql-editor h4,
+.ql-snow .ql-editor h5,
+.ql-snow .ql-editor h6 {
+  margin: 0 0 8px;
+
+  color: #212121;
+
+  font-weight: 400;
+}
+
 .ql-snow .ql-editor h1 {
   font-size: 48px;
-  margin: 0;
-  font-weight: 300;
 }
 
 .ql-snow .ql-editor h2 {
   font-size: 34px;
-  margin: 0;
-  font-weight: 300;
-  letter-spacing: 0.25;
 }
 
 .ql-snow .ql-editor h3 {
   font-size: 24px;
-  margin: 0;
-  font-weight: 300;
 }
+
 .ql-snow .ql-editor h4 {
   font-size: 20px;
-  margin:0;
-  font-weight: 300;
-  letter-spacing: 0.15;
+  font-weight: 500;
 }
+
+.ql-snow .ql-editor h5 {
+  font-size: 16px;
+}
+
+.ql-snow .ql-editor h6 {
+  font-size: 14px;
+  font-weight: 500;
+}
+
 .ql-snow .ql-editor p {
   font-family: "Roboto", sans-serif;
 }
