--- a/src/app/components/article-search/article-search.component.html
+++ b/src/app/components/article-search/article-search.component.html
@@ -1,4 +1,5 @@
 <form>
+    <!-- <mat-icon matPrefix>search</mat-icon> -->
     <mat-form-field class="search-field">
         <input
             #searchInput
