--- a/src/app/components/rubric/rubric.component.html
+++ b/src/app/components/rubric/rubric.component.html
@@ -8,7 +8,7 @@
     <div class="icon-wrapper add-icon-wrapper">
       <mat-icon>create_new_folder</mat-icon>
     </div>
-    Добавить рубрику
+    <span>Добавить рубрику</span>
   </button>
 </div>
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="tree">
