--- a/src/app/components/article-editor/article-editor.component.html
+++ b/src/app/components/article-editor/article-editor.component.html
@@ -4,7 +4,7 @@
 
 <mat-form-field>
   <mat-select placeholder="Статус" [(value)]="articleStatus">
-    <mat-option *ngFor="let status of mockStatus" [value]="status.value">
+    <mat-option *ngFor="let status of statuses" [value]="status.value">
       {{ status.view }}
     </mat-option>
   </mat-select>
