--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -40,6 +40,7 @@
 
   </div>
 
+  <app-file-uploader [articleId]="article.id"></app-file-uploader>
   <app-tags [articleId]="article.id"></app-tags>
 
   <app-comments [articleId]="article.id"></app-comments>
