--- a/src/app/components/file-uploader/file-uploader.component.css
+++ b/src/app/components/file-uploader/file-uploader.component.css
@@ -1,3 +1,7 @@
+:host {
+    display: block;
+    margin-bottom: 24px;
+}
 input[type="file"] {
     display: none;
 }
@@ -13,6 +17,24 @@ input[type="file"] {
     border-radius: 4px;
     font-size: 14px;
 }
-.download {
+
+.download-container {
+    padding: 0 8px;
+    font-size: 14px;
     cursor: pointer;
+    display: flex;
+}
+.download-link {
+    text-decoration: none;
+    color: #616161;
+    display: inline-flex;
+    align-items: center;
+    
+}
+.upload-button {
+    margin-bottom: 12px;
+    display: block;
+}
+.mat-icon {
+    margin: 8px;
 }
