--- a/src/app/components/rubric/delete-rubric-dialog/delete-rubric-dialog.component.css
+++ b/src/app/components/rubric/delete-rubric-dialog/delete-rubric-dialog.component.css
@@ -11,14 +11,15 @@
   width: 5px;
   height: 8px;
   border-radius: 3px;
-  background-color: #dfdfdf; 
+  background-color: #dfdfdf;
 }
 
 .list::-webkit-scrollbar-thumb {
-    border-radius: 3px;
-    background: #9f9f9f; 
+  border-radius: 3px;
+  background: #9f9f9f;
 }
 
 .list-item {
-    margin-bottom: 12px;
+  margin-bottom: 8px;
+  line-height: 1em;
 }
