#59: Move file uploader to frticle editor

--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -40,7 +40,7 @@
 
   </div>
 
-  <app-file-uploader [articleId]="article.id"></app-file-uploader>
+  <app-file-view class="files-wrapper" [articleId]="article.id"></app-file-view>
   <app-tags [articleId]="article.id"></app-tags>
 
   <app-comments [articleId]="article.id"></app-comments>
