--- a/src/app/components/file-uploader/file-uploader.component.html
+++ b/src/app/components/file-uploader/file-uploader.component.html
@@ -1,22 +1,19 @@
 
 <div>
-        <form [formGroup] = "uploadForm">      
-          <!-- <div>
-            <input type="file" name="profile" (change)="onFileSelect($event)" />
-          </div> -->
-          <button mat-raised-button color="primary" class="upload-button"><label for="file-upload">
-            Загрузить файл
-          </label></button>
-        <input id="file-upload" type="file" (change)="onFileSelect($event)"/>
-         <div *ngFor="let file of files"  class="download-container">            
-           <a href="/api/article/{{articleId}}/file/{{file.id}}" target="_blank" class = "download-link">
-
-               <mat-icon class="mat-icon">attachment</mat-icon>
-              {{file.name}}
-            </a>
-           <button mat-icon-button (click)="openDeleteDialog(file)">
-             <mat-icon  class="mat-icon">close</mat-icon>
-            </button>
-          </div>
-        </form>
+  <form [formGroup] = "uploadForm">
+  <input #fileUpload type="file" (change)="onFileSelect($event)"/>
+    <button mat-raised-button color="primary" (click)="fileUpload.click()">
+      Загрузить файл
+    </button>
+  </form>
+  <app-file-view [articleId]="articleId" [deleteEnabled]="true"></app-file-view>
+  <div *ngFor="let file of files; let i = index "  class="uploaded-files-wrapper">            
+      <div class = "uploaded-files-wrapper">
+          <mat-icon class="mat-icon">attach_file</mat-icon>
+          {{file.name}}
       </div>
+      <button mat-icon-button (click)="delete(i)">
+          <mat-icon  class="mat-icon">close</mat-icon>
+      </button>
+  </div>
+</div>
