--- a/src/app/components/article-editor/article-editor.component.html
+++ b/src/app/components/article-editor/article-editor.component.html
@@ -14,7 +14,7 @@
   placeholder=""
   [modules] = "quillConfig"
   [(ngModel)]="content"></quill-editor>
-
+<app-file-uploader [articleId]="id"></app-file-uploader>
 <div class="btn-contols">
   <button (click)="save();" mat-button mat-raised-button color="primary" class="button">
     Сохранить
