#62: Add menu events to article menu component

--- a/src/app/components/article-menu/article-menu.component.html
+++ b/src/app/components/article-menu/article-menu.component.html
@@ -1,4 +1,7 @@
-<button mat-icon-button mat-button [matMenuTriggerFor]="beforeMenu">
+<button mat-icon-button mat-button 
+        [matMenuTriggerFor]="beforeMenu"
+        (menuOpened)="menuOpened.emit()"
+        (menuClosed)="menuClosed.emit()">
     <mat-icon>{{ menuIcon }}</mat-icon>
 </button>
 
