#70: Fix article styles

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -30,6 +30,8 @@
 .header-link-content {
   display: block;
 
-  max-width: 1220px;
+  /* max-width: 1220px; */
   margin: 0 auto;
+
+  text-align: center;
 }
