--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,11 @@
   <mat-sidenav #sidenav
       [mode]="((isHandset | async) || (isSmall | async)) ? 'over' : 'side'"
       [opened]="((isHandset | async) || (isSmall | async)) === false">
+    <button mat-button
+        (click)="sidenav.toggle()"
+        *ngIf="((isHandset | async) || (isSmall | async))">
+      <mat-icon>close</mat-icon>
+    </button>
     <app-rubric></app-rubric>
   </mat-sidenav>
   <mat-sidenav-content>
