--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
   <mat-sidenav #sidenav
       [mode]="((isHandset | async) || (isSmall | async)) ? 'over' : 'side'"
       [opened]="((isHandset | async) || (isSmall | async)) === false">
-    <button mat-button
+    <button class="sidenav-btn-close"
+        mat-button
         (click)="sidenav.toggle()"
         *ngIf="((isHandset | async) || (isSmall | async))">
       <mat-icon>close</mat-icon>
@@ -11,7 +12,8 @@
     <app-rubric></app-rubric>
   </mat-sidenav>
   <mat-sidenav-content>
-    <button mat-button
+    <button class="sidenav-btn-open"
+        mat-button
         (click)="sidenav.toggle()"
         *ngIf="((isHandset | async) || (isSmall | async))">
       <mat-icon>menu</mat-icon>
