#66: Hide kebab-buttons

--- a/src/app/components/rubric/rubric-nested-node/rubric-nested-node.component.html
+++ b/src/app/components/rubric/rubric-nested-node/rubric-nested-node.component.html
@@ -5,7 +5,8 @@
         </mat-icon>
     </button>
     {{ node.title }}
-    <button class="kebab-button" 
+    <button *ngIf="!((isHandset | async) || (isSmall | async))"
+        class="kebab-button"
         mat-icon-button 
         mat-button 
         [matMenuTriggerFor]="beforeMenu"
