--- a/src/app/components/sidenav-search/sidenav-search.component.css
+++ b/src/app/components/sidenav-search/sidenav-search.component.css
@@ -28,4 +28,7 @@
     :host ::ng-deep .mat-form-field-flex {
         padding: 0;
     }
+    .mat-form-field-wrapper {
+        padding-bottom: 0;
+    }
   }
