change header-search for mobile

--- a/src/app/components/article-search/article-search.component.css
+++ b/src/app/components/article-search/article-search.component.css
@@ -1,3 +1,12 @@
 .search-field {
     display: block;
+    text-align: left;
 }
+
+@media(max-width: 960px) {
+    .search-field {
+        text-align: center;
+        border-bottom: 1px solid #c4c4c4;
+    }
+}
+
