--- a/src/app/components/sidenav-search/sidenav-search.component.css
+++ b/src/app/components/sidenav-search/sidenav-search.component.css
@@ -1,8 +1,6 @@
 :host {
     box-sizing: border-box;
-
     width: 320px;
-
     border-right: 1px solid rgba(0, 0, 0, 0.12);
 }
 
@@ -18,3 +16,13 @@
 :host ::ng-deep .mat-icon {
     font-size: 24px;
 }
+
+@media(max-width: 960px) {
+    :host ::ng-deep .mat-form-field-flex {
+        height: 72px;
+        padding: 7px 24px 23px;
+    }
+    .mat-form-field-wrapper {
+        padding-bottom: 0;
+    }
+  }
