--- a/src/app/components/article-search/article-search.component.html
+++ b/src/app/components/article-search/article-search.component.html
@@ -4,7 +4,7 @@
         <input
             #searchInput
             type="text"
-            placeholder="Поиск"
+            placeholder="Поиск..."
             matInput
             [formControl]="searchControl"
             [matAutocomplete]="auto"
