--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -3,35 +3,60 @@
   top: 0;
   left: 0;
   z-index: 2;
-
   display: flex;
   box-sizing: border-box;
-
   width: 100%;
   height: 72px;
-
   background: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  border-bottom: 1px solid #c4c4c4;
+  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); */
 }
 
 .header-link {
   display: block;
   flex-grow: 1;
-
   padding: 24px 40px;
-
   color: #212121;
   text-decoration: none;
-
   font-size: 16px;
   font-weight: 400;
 }
 
 .header-link-content {
   display: block;
-
   /* max-width: 1220px; */
   margin: 0 auto;
-
   text-align: center;
+}
+
+.desktop-hidden {
+  display: none;
+}
+
+@media(max-width: 960px) {
+  .search-input {
+    border: none;
+  }
+  .main-header {
+   display: block;
+  }
+  .mobile-hidden {
+    display: none;
+  }
+  .desktop-hidden {
+    display: block;
+    width: 101%;
+  }
+}
+
+@media(max-width: 559px) {
+  .header-link {
+    padding-bottom: 0;
+  }
+}
+
+@media(max-width: 353px) {
+  .header-link {
+    font-size: 14px;
+  }
 }
