--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,6 @@
 <div class="main-header">
-    <app-sidenav-search class="mobile-hidden"></app-sidenav-search>
+    <app-sidenav-search></app-sidenav-search>
     <a [routerLink]="['/']" class=header-link>
         <span class=header-link-content>Макет ПС сбора, хранения, накопления военно-научных знаний</span>
     </a>
-        <app-sidenav-search class="desktop-hidden"></app-sidenav-search>
 </div>
