--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -6,7 +6,6 @@
   display: flex;
   box-sizing: border-box;
   width: 100%;
-  height: 72px;
   background: #fff;
   border-bottom: 1px solid #c4c4c4;
   /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); */
@@ -24,13 +23,8 @@
 
 .header-link-content {
   display: block;
-  /* max-width: 1220px; */
   margin: 0 auto;
   text-align: center;
-}
-
-.desktop-hidden {
-  display: none;
 }
 
 @media(max-width: 960px) {
@@ -38,14 +32,11 @@
     border: none;
   }
   .main-header {
-   display: block;
+    flex-direction: column-reverse;
   }
-  .mobile-hidden {
-    display: none;
-  }
-  .desktop-hidden {
-    display: block;
-    width: 101%;
+  .header-link {
+    padding: 10px 20px;
+    border-bottom: 1px solid #c4c4c4;
   }
 }
 
