--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -32,8 +32,7 @@ mat-sidenav-content {
     }
 
     mat-sidenav-content {
-        position: relative;
-
+        z-index: -1;
         padding-left: 70px;
         padding-right: 70px;
     }
