#75: Add spinners on file uploading

--- a/src/app/components/file-uploader/file-uploader.component.css
+++ b/src/app/components/file-uploader/file-uploader.component.css
@@ -34,3 +34,11 @@ input[type="file"] {
 .mat-icon {
     margin-right: 0;
 }
+
+.loading {
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
