--- a/src/app/components/article-editor/article-editor.component.html
+++ b/src/app/components/article-editor/article-editor.component.html
@@ -14,12 +14,18 @@
   placeholder=""
   [modules] = "quillConfig"
   [(ngModel)]="content"></quill-editor>
-<app-file-uploader [articleId]="id"></app-file-uploader>
+<app-file-uploader [articleId]="id" [isUploading]="isUploading"></app-file-uploader>
 <div class="btn-contols">
-  <button (click)="save();" mat-button mat-raised-button color="primary" class="button">
+  <button (click)="save();" mat-raised-button 
+          color="primary" 
+          class="button"
+          [disabled]="isUploading">
     Сохранить
   </button>
-  <button (click)="goBack()" mat-button class="button">
+  <button (click)="goBack()" 
+          mat-button 
+          class="button" 
+          [disabled]="isUploading">
     Отменить
   </button>
 </div>
