--- a/src/styles.css
+++ b/src/styles.css
@@ -128,3 +128,25 @@ quill-view .ql-editor {
 quill-editor .ql-container {
   height: 500px;
 }
+
+@media (max-width: 960px) {
+  .ql-snow .ql-editor h1 {
+    font-size: 24px;
+  }
+  
+  .ql-snow .ql-editor h2 {
+    font-size: 22px;
+  }
+  
+  .ql-snow .ql-editor h3 {
+    font-size: 20px;
+  }
+  
+  .ql-snow .ql-editor h4 {
+    font-size: 18px;
+  }
+
+  .ql-snow .ql-editor p {
+    font-size: 14px;
+  }
+}
