--- a/src/styles.css
+++ b/src/styles.css
@@ -129,6 +129,27 @@ quill-editor .ql-container {
   height: 500px;
 }
 
+@media (max-width: 960px) {
+  .ql-snow .ql-editor h1 {
+    font-size: 24px;
+  }
+  
+  .ql-snow .ql-editor h2 {
+    font-size: 22px;
+  }
+  
+  .ql-snow .ql-editor h3 {
+    font-size: 20px;
+  }
+  
+  .ql-snow .ql-editor h4 {
+    font-size: 18px;
+  }
+
+  .ql-snow .ql-editor p {
+    font-size: 14px;
+  }
+}
 .mat-progress-spinner circle, .mat-spinner circle {
   stroke: #616161;
 }
